Security fix for TYPO3 8 and 9

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -13,13 +13,13 @@
 # ...   (required) title (displayed in left sidebar (desktop) or top panel (mobile)
 # .................................................................................
 
-project     = Newsletter subscriber management (for tt_address and direct_mail or fe_users and luxletter)
+project     = Newsletter subscriber managment
 
 # .................................................................................
 # ...   (recommended) version, displayed next to title (desktop) and in <meta name="book-version"
 # .................................................................................
 
-release     = latest
+release     = 0.17.0
 
 # .................................................................................
 # ...  (recommended) displayed in footer
