--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,14 @@
 {
 	"name" : "fixpunkt/fp-newsletter",
 	"type" : "typo3-cms-extension",
-	"description" : "Plugin for newsletter subscription and unsubscription (for direct_mail). Used table: tt_address or fe_users. A log is written.",
+	"description" : "Plugin for newsletter subscription and unsubscription (for direct_mail). Used table: tt_address. A log is written.",
 	"authors" : [{
 			"name" : "Kurt Gusbeth",
-			"role" : "Developer",
-			"homepage": "https://www.quizpalme.de"
+			"role" : "Developer"
 		}
 	],
 	"require" : {
-		"typo3/cms-core" : "~10.4.6 || ~11.5.3"
+		"typo3/cms-core" : "^8.7 || ^9.5"
 	},
 	"autoload" : {
 		"psr-4" : {
@@ -24,7 +23,10 @@
 	"replace" : {
 		"typo3-ter/fp-newsletter" : "self.version"
 	},
-	"homepage" : "https://www.fixpunkt.com/webentwicklung/typo3/typo3-programmierung",
+	"homepage" : "https://www.fixpunkt.com/webentwicklung/typo3/typo3-extensions/",
+	"support" : {
+		"email" : "info@quizpalme.de"
+	},
 	"license" : "GPL-3.0-or-later",
 	"keywords" : [
 		"newsletter subscription",
